// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NearestListingHero > snapshot — annonce ancienne (>48h), avec photo, sans badge 1`] = `
<DocumentFragment>
  <div
    class="px-4 sm:px-5 md:px-8 mb-6 md:mb-8"
  >
    <a
      class="group block bg-card border border-border rounded-2xl overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:-translate-y-0.5 hover:border-primary/30"
      href="/sits/sit-1"
    >
      <div
        class="flex flex-col sm:flex-row"
      >
        <div
          class="relative sm:w-48 md:w-56 h-40 sm:h-auto sm:min-h-[160px] overflow-hidden bg-muted shrink-0"
        >
          <img
            alt="Garde d'un golden retriever"
            class="w-full h-full object-cover transition-transform duration-500 ease-out group-hover:scale-[1.04]"
            height="224"
            loading="lazy"
            src="https://example.com/p.jpg"
            width="400"
          />
        </div>
        <div
          class="flex-1 p-4 sm:p-5 flex flex-col justify-between min-w-0"
        >
          <div>
            <p
              class="text-xs uppercase tracking-widest text-primary font-sans font-medium mb-1.5 flex items-center gap-1.5"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sparkles h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                />
                <path
                  d="M20 3v4"
                />
                <path
                  d="M22 5h-4"
                />
                <path
                  d="M4 17v2"
                />
                <path
                  d="M5 18H3"
                />
              </svg>
              Annonce la plus proche
            </p>
            <h3
              class="text-base sm:text-lg font-heading font-semibold text-foreground line-clamp-2 transition-colors group-hover:text-primary mb-2"
            >
              Garde d'un golden retriever
            </h3>
            <div
              class="flex flex-wrap gap-x-4 gap-y-1 text-xs text-muted-foreground"
            >
              <span
                class="flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
                10 juin → 15 juin
              </span>
              <span
                class="flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
                Appartement
              </span>
            </div>
          </div>
          <div
            class="mt-3 flex items-center justify-between"
          >
            <span
              class="text-xs text-muted-foreground"
            >
              Découvrir cette annonce
            </span>
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-primary transition-transform duration-200 group-hover:translate-x-0.5"
            >
              Voir 
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`NearestListingHero > snapshot — annonce nouvelle (<48h), pas urgente, sans photo 1`] = `
<DocumentFragment>
  <div
    class="px-4 sm:px-5 md:px-8 mb-6 md:mb-8"
  >
    <a
      class="group block bg-card border border-border rounded-2xl overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:-translate-y-0.5 hover:border-primary/30"
      href="/sits/sit-1"
    >
      <div
        class="flex flex-col sm:flex-row"
      >
        <div
          class="relative sm:w-48 md:w-56 h-40 sm:h-auto sm:min-h-[160px] overflow-hidden bg-muted shrink-0"
        >
          <div
            class="w-full h-full bg-gradient-to-br from-primary/10 to-primary/5 flex items-center justify-center"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles h-8 w-8 text-primary/30"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
              />
              <path
                d="M20 3v4"
              />
              <path
                d="M22 5h-4"
              />
              <path
                d="M4 17v2"
              />
              <path
                d="M5 18H3"
              />
            </svg>
          </div>
          <div
            class="absolute top-2 left-2 flex gap-1.5"
          >
            <span
              class="text-[11px] font-semibold bg-primary text-primary-foreground rounded-full px-2 py-0.5 shadow"
            >
              Nouveau
            </span>
          </div>
        </div>
        <div
          class="flex-1 p-4 sm:p-5 flex flex-col justify-between min-w-0"
        >
          <div>
            <p
              class="text-xs uppercase tracking-widest text-primary font-sans font-medium mb-1.5 flex items-center gap-1.5"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sparkles h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                />
                <path
                  d="M20 3v4"
                />
                <path
                  d="M22 5h-4"
                />
                <path
                  d="M4 17v2"
                />
                <path
                  d="M5 18H3"
                />
              </svg>
              Annonce la plus proche
            </p>
            <h3
              class="text-base sm:text-lg font-heading font-semibold text-foreground line-clamp-2 transition-colors group-hover:text-primary mb-2"
            >
              Garde d'un golden retriever
            </h3>
            <div
              class="flex flex-wrap gap-x-4 gap-y-1 text-xs text-muted-foreground"
            >
              <span
                class="flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
                10 juin → 15 juin
              </span>
              <span
                class="flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
                Maison
              </span>
            </div>
          </div>
          <div
            class="mt-3 flex items-center justify-between"
          >
            <span
              class="text-xs text-muted-foreground"
            >
              Découvrir cette annonce
            </span>
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-primary transition-transform duration-200 group-hover:translate-x-0.5"
            >
              Voir 
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`NearestListingHero > snapshot — annonce urgente (badge Urgent prioritaire sur Nouveau) 1`] = `
<DocumentFragment>
  <div
    class="px-4 sm:px-5 md:px-8 mb-6 md:mb-8"
  >
    <a
      class="group block bg-card border border-border rounded-2xl overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:-translate-y-0.5 hover:border-primary/30"
      href="/sits/sit-1"
    >
      <div
        class="flex flex-col sm:flex-row"
      >
        <div
          class="relative sm:w-48 md:w-56 h-40 sm:h-auto sm:min-h-[160px] overflow-hidden bg-muted shrink-0"
        >
          <div
            class="w-full h-full bg-gradient-to-br from-primary/10 to-primary/5 flex items-center justify-center"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles h-8 w-8 text-primary/30"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
              />
              <path
                d="M20 3v4"
              />
              <path
                d="M22 5h-4"
              />
              <path
                d="M4 17v2"
              />
              <path
                d="M5 18H3"
              />
            </svg>
          </div>
          <div
            class="absolute top-2 left-2 flex gap-1.5"
          >
            <span
              class="text-[11px] font-semibold bg-destructive text-destructive-foreground rounded-full px-2 py-0.5 shadow"
            >
              Urgent
            </span>
          </div>
        </div>
        <div
          class="flex-1 p-4 sm:p-5 flex flex-col justify-between min-w-0"
        >
          <div>
            <p
              class="text-xs uppercase tracking-widest text-primary font-sans font-medium mb-1.5 flex items-center gap-1.5"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sparkles h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                />
                <path
                  d="M20 3v4"
                />
                <path
                  d="M22 5h-4"
                />
                <path
                  d="M4 17v2"
                />
                <path
                  d="M5 18H3"
                />
              </svg>
              Annonce la plus proche
            </p>
            <h3
              class="text-base sm:text-lg font-heading font-semibold text-foreground line-clamp-2 transition-colors group-hover:text-primary mb-2"
            >
              Garde d'un golden retriever
            </h3>
            <div
              class="flex flex-wrap gap-x-4 gap-y-1 text-xs text-muted-foreground"
            >
              <span
                class="flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
                10 juin → 15 juin
              </span>
              <span
                class="flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3.5 w-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
                Maison
              </span>
            </div>
          </div>
          <div
            class="mt-3 flex items-center justify-between"
          >
            <span
              class="text-xs text-muted-foreground"
            >
              Découvrir cette annonce
            </span>
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-primary transition-transform duration-200 group-hover:translate-x-0.5"
            >
              Voir 
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`SitterEmergencyCard — modes aperçu > snapshot — vue ACTIVE (profil créé, pilotage inline) 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-1 rounded-full border border-dashed border-amber-400/60 bg-background/80 backdrop-blur px-2 py-1 mb-2 text-[11px] w-fit"
  >
    <svg
      class="lucide lucide-eye h-3 w-3 text-amber-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
      />
      <circle
        cx="12"
        cy="12"
        r="3"
      />
    </svg>
    <span
      class="text-muted-foreground mr-1"
    >
      Aperçu :
    </span>
    <button
      class="px-1.5 py-0.5 rounded-full transition text-muted-foreground hover:text-foreground"
      type="button"
    >
      Verrouillé
    </button>
    <button
      class="px-1.5 py-0.5 rounded-full transition text-muted-foreground hover:text-foreground"
      type="button"
    >
      Éligible
    </button>
    <button
      class="px-1.5 py-0.5 rounded-full transition bg-amber-500 text-white font-medium"
      type="button"
    >
      Actif
    </button>
    <button
      aria-label="Quitter l'aperçu (revenir aux données réelles)"
      class="ml-1 px-1.5 py-0.5 rounded-full text-muted-foreground hover:text-foreground"
      title="Revenir aux données réelles"
      type="button"
    >
      ✕
    </button>
  </div>
  <div
    class="rounded-2xl border-2 border-amber-300 bg-gradient-to-br from-amber-50 to-amber-100/50 p-5 space-y-3"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-2.5"
      >
        <span
          class="inline-flex items-center justify-center h-9 w-9 rounded-full bg-gradient-to-br from-amber-400 to-amber-500 text-white shadow"
        >
          <svg
            class="lucide lucide-zap h-4 w-4"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            />
          </svg>
        </span>
        <div>
          <p
            class="font-heading font-semibold text-sm"
          >
            Gardien d'urgence
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            Actif, visible en cas d'urgence
          </p>
        </div>
      </div>
      <button
        aria-checked="true"
        class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50"
        data-state="checked"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
          data-state="checked"
        />
      </button>
    </div>
    <div
      class="text-xs text-muted-foreground space-y-1 pl-1"
    >
      <p>
        Rayon : 
        <span
          class="font-medium text-foreground"
        >
          20 km
        </span>
      </p>
      <p>
        Animaux : 
        <span
          class="font-medium text-foreground"
        >
          Chiens, Chats
        </span>
      </p>
      <p>
        Alertes SMS : 
        <span
          class="font-medium text-foreground"
        >
          activées
        </span>
      </p>
      <p
        class="text-amber-700 font-medium pt-1"
      >
        2 interventions, 2 mois offerts
      </p>
    </div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 font-body border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-pill h-9 px-4 gap-1.5 w-full"
    >
      <svg
        class="lucide lucide-settings h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
       Modifier mes disponibilités
    </button>
  </div>
</DocumentFragment>
`;

exports[`SitterEmergencyCard — modes aperçu > snapshot — vue ELIGIBLE (tous critères OK, pas encore activé) 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-1 rounded-full border border-dashed border-amber-400/60 bg-background/80 backdrop-blur px-2 py-1 mb-2 text-[11px] w-fit"
  >
    <svg
      class="lucide lucide-eye h-3 w-3 text-amber-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
      />
      <circle
        cx="12"
        cy="12"
        r="3"
      />
    </svg>
    <span
      class="text-muted-foreground mr-1"
    >
      Aperçu :
    </span>
    <button
      class="px-1.5 py-0.5 rounded-full transition text-muted-foreground hover:text-foreground"
      type="button"
    >
      Verrouillé
    </button>
    <button
      class="px-1.5 py-0.5 rounded-full transition bg-amber-500 text-white font-medium"
      type="button"
    >
      Éligible
    </button>
    <button
      class="px-1.5 py-0.5 rounded-full transition text-muted-foreground hover:text-foreground"
      type="button"
    >
      Actif
    </button>
    <button
      aria-label="Quitter l'aperçu (revenir aux données réelles)"
      class="ml-1 px-1.5 py-0.5 rounded-full text-muted-foreground hover:text-foreground"
      title="Revenir aux données réelles"
      type="button"
    >
      ✕
    </button>
  </div>
  <div
    class="rounded-2xl border-2 border-amber-300 bg-gradient-to-br from-amber-50 to-amber-100/50 p-5 space-y-3"
  >
    <div
      class="flex items-center gap-2.5"
    >
      <span
        class="inline-flex items-center justify-center h-9 w-9 rounded-full bg-gradient-to-br from-amber-400 to-amber-500 text-white shadow"
      >
        <svg
          class="lucide lucide-zap h-4 w-4"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </span>
      <div>
        <p
          class="font-heading font-semibold text-sm"
        >
          Vous êtes éligible
        </p>
        <p
          class="text-xs text-muted-foreground"
        >
          Activez le mode Gardien d'urgence
        </p>
      </div>
    </div>
    <p
      class="text-xs text-foreground/80"
    >
      Tous les critères sont validés. Activez votre profil pour recevoir les demandes urgentes des propriétaires de votre zone.
    </p>
    <a
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 font-body rounded-pill h-9 px-4 w-full bg-amber-500 hover:bg-amber-600 text-white"
      href="/gardien-urgence"
    >
      Activer maintenant
    </a>
  </div>
</DocumentFragment>
`;

exports[`SitterEmergencyCard — modes aperçu > snapshot — vue LOCKED (critères non remplis) 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-1 rounded-full border border-dashed border-amber-400/60 bg-background/80 backdrop-blur px-2 py-1 mb-2 text-[11px] w-fit"
  >
    <svg
      class="lucide lucide-eye h-3 w-3 text-amber-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
      />
      <circle
        cx="12"
        cy="12"
        r="3"
      />
    </svg>
    <span
      class="text-muted-foreground mr-1"
    >
      Aperçu :
    </span>
    <button
      class="px-1.5 py-0.5 rounded-full transition bg-amber-500 text-white font-medium"
      type="button"
    >
      Verrouillé
    </button>
    <button
      class="px-1.5 py-0.5 rounded-full transition text-muted-foreground hover:text-foreground"
      type="button"
    >
      Éligible
    </button>
    <button
      class="px-1.5 py-0.5 rounded-full transition text-muted-foreground hover:text-foreground"
      type="button"
    >
      Actif
    </button>
    <button
      aria-label="Quitter l'aperçu (revenir aux données réelles)"
      class="ml-1 px-1.5 py-0.5 rounded-full text-muted-foreground hover:text-foreground"
      title="Revenir aux données réelles"
      type="button"
    >
      ✕
    </button>
  </div>
  <div
    class="rounded-2xl border border-border bg-card p-5 space-y-3"
  >
    <div
      class="flex items-center gap-2.5"
    >
      <span
        class="inline-flex items-center justify-center h-9 w-9 rounded-full bg-muted"
      >
        <svg
          class="lucide lucide-zap h-4 w-4 text-amber-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </span>
      <div>
        <p
          class="font-heading font-semibold text-sm"
        >
          Gardien d'urgence
        </p>
        <p
          class="text-xs text-muted-foreground"
        >
          Le plus haut niveau de confiance
        </p>
      </div>
    </div>
    <div
      class="space-y-1.5"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-circle-x h-4 w-4 text-muted-foreground/60 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <span
          class="text-muted-foreground"
        >
          Gardes : 1/5
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-circle-x h-4 w-4 text-muted-foreground/60 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <span
          class="text-muted-foreground"
        >
          Note : 4.5/4.7
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-circle-x h-4 w-4 text-muted-foreground/60 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <span
          class="text-muted-foreground"
        >
          Annulations (6 mois) : 1
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-circle-x h-4 w-4 text-muted-foreground/60 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <span
          class="text-muted-foreground"
        >
          Identité vérifiée
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-circle-check h-4 w-4 text-primary shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        <span
          class="text-foreground"
        >
          Abonnement actif
        </span>
      </div>
    </div>
    <p
      class="text-xs text-muted-foreground"
    >
      Encore 4 gardes pour débloquer le statut.
    </p>
    <a
      class="text-xs text-primary hover:underline inline-flex items-center gap-1"
      href="/gardien-urgence"
    >
      En savoir plus 
      <svg
        class="lucide lucide-chevron-right h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`SitterNextGuardEmpty > snapshot — état vide stable 1`] = `
<DocumentFragment>
  <div
    class="px-4 sm:px-5 md:px-8 mb-6 md:mb-8"
  >
    <a
      class="group block bg-muted/30 border border-dashed border-border rounded-2xl p-4 sm:p-5 transition-all duration-300 ease-out hover:bg-muted/50 hover:border-primary/30 hover:-translate-y-0.5"
      href="/search"
    >
      <div
        class="flex items-center justify-between mb-2"
      >
        <p
          class="text-xs uppercase tracking-widest text-muted-foreground font-sans font-medium"
        >
          Prochaine garde
        </p>
        <span
          class="text-xs bg-muted text-muted-foreground rounded-full px-2.5 py-0.5 font-medium"
        >
          Aucune
        </span>
      </div>
      <p
        class="text-sm font-semibold text-foreground mb-1 transition-colors group-hover:text-primary"
      >
        Vous n'avez pas encore de garde planifiée
      </p>
      <div
        class="flex items-center justify-between mt-3"
      >
        <span
          class="flex items-center gap-1.5 text-xs text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          Trouvez votre première mission
        </span>
        <span
          class="inline-flex items-center gap-1 text-xs font-medium text-primary transition-transform duration-200 group-hover:translate-x-0.5"
        >
          Explorer 
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </span>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
